src/app/mail/mail-settings/mail-settings.component.scss
@import '../../../styles/base/variables';
@import '../../../styles/vendors/include-media/include-media';
@import '../../../styles/config/include-media-config';
@import '../../../styles/vendors/ceaser/ceaser-easing';

$error-red: #e94e4c;

// == Settigs page styles

.desc-card-holder {
  @include media("<=sm") {
    margin: .75rem -.938rem 0;
  }
}

// == Info list
.info-list {
  // == Large list
  &-lg {
    .info-list-label {
      width: 200px;//~170px;
    }

    .info-list-val {
      width: calc(100% - 200px - 1.25rem);//~calc(100% - 170px - 1.25rem);
    }
  }
}

.info-list-item {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  padding: 1.188rem 0.938rem;
  background: $brand-faded;
  border: 1px solid darken($brand-faded, 3%);
  font-size: 0.875rem;
  line-height: 1.14;

  &:not(:last-of-type) {
    border-bottom: 0;
  }

  @include media(">=ipad") {
    padding: 1.188rem 1.563rem;
  }
}

.info-list-label {
  margin-right: 1.25rem;
  font-weight: bold;
  width: 140px;//~65px;
}

.long-text-lang-active {
  .info-list-label {
    width: 140px;
  }
}

.info-list-val {
  width: calc(100% - 140px - 1.25rem); //~calc(100% - 65px - 1.25rem);
}

.long-text-lang-active {
  .info-list-val {
    width: calc(100% - 140px - 1.25rem);
  }
}

.info-list-val-text {
  &:not(:last-of-type) {
    margin-bottom: 0.625rem;
  }
}

.info-list-item-row {
  display: flex;
  align-items: center;
  flex: 0 0 100%;
  max-width: 100%;

  &:not(:last-of-type) {
    margin-bottom: 0.938rem;
  }

  .info-list-label-text:first-of-type {
    margin-right: 1.125rem;
  }
}

// == Progressbar
.progress-lg {
  .progress-bar {
    border-radius: 0 4px 4px 0;
  }

  @include media(">sm") {
    line-height: 1.25rem;

    .progress-bar {
      height: 1.25rem;
      border-radius: 0 4px 4px 0;
    }
  }
}

.progress-secondary {
  background: #e0e8ef;
  .progress-bar {
    background: $brand-secondary;
  }
}

// == Custom grid : 10px gutter
.row-sm {
  margin-right: -.75rem;
  margin-left: -.75rem;

  > [class*="col-"] {
    padding-right: .75rem;
    padding-left: .75rem;
  }
}

.row-xs-sm {
  margin-right: -.375rem;
  margin-left: -.375rem;

  > [class*="col-"] {
    padding-right: .375rem;
    padding-left: .375rem;
  }
}

.flex-auto-col {
  flex: 0 0 auto;
  max-width: inherit;
  width: auto;
}

// == Setting form content card
.form-content-row {
  &:not(:last-child) {
    margin-bottom: 1.125rem;
  }
}

.form-content-row-sm {
  &:not(:last-child) {
    margin-bottom: .875rem;
  }
}

.ui-list,
.info-card {
  &:not(:last-child) {
    margin-bottom: 1.25rem;
  }
}

.form-content-holder {
  font-size: 14px;

  @include media("<=sm") {
    font-size: 0.875rem;
  }

  .form-control-sm {
    padding-right: 0.75rem;
    padding-left: 0.75rem;
    font-size: 0.75rem;

    @include media(">sm") {
      height: 2rem;
    }
  }
}

.form-control-contenteditable {
  min-height: 5.750rem;
}

.dropdown.dropdown-sm {
  .dropdown-toggle {
    padding-right: 0.75rem;
    padding-left: 0.75rem;
    border-radius: 2px;
    font-size: 14px;
    height: 2rem;
    width: 100%;
    line-height: 1;

    &::before {
      right: 0.75rem;
    }

    .form-content-holder & {
      @include media("<=sm") {
        font-size: 0.875rem;
        height: 2.625rem;
      }
    }
  }

  .dropdown-item {
    line-height: 1;

    @include media("<=sm") {
      font-size: 0.875rem;
    }
  }
}

.form-label {
  @include media("<=sm") {
    margin-bottom: 0.75rem !important;
    font-size: 0.875rem;
    line-height: 1;
  }
}

.form-label-text {
  display: block;
  font-size: 12px;
}

// == Settings action list
.setting-actions-list {
  margin-right: -.563rem;
  margin-left: -.563rem;

  > li {
    padding-right: .563rem;
    padding-left: .563rem;

    .icon {
      color: $brand-light-gray;
      font-size: 1.063rem;
      line-height: 1.188;
    }
  }
}

// == UI list
.ui-list-item {
  padding: 0.907rem 0.938rem;
  line-height: 1;

  &-xs-full {
    @include media("<=sm") {
      margin-right: -.938rem;
      margin-left: -.938rem;
    }
  }
}

.ui-list-styled .ui-list-item {
  border: 1px solid $input-border-color;

  &:not(:last-of-type) {
    border-bottom: 0;
  }
}

.info-card {
  background: #f5f5f5;

  p {
    font-size: 14px;
    margin-bottom: 0.25rem;
  }
}

.form-content-holder .btn-link {
  font-size: 0.75rem;
}

// == Modals
[class*="col-"].form-content-right-stretch,
[class*="col-"].add-filter-moveto-col {
  flex: 0 0 calc(100% - 100px);
  max-width: calc(100% - 100px);

  @include media(">sm") {
    flex: 0 0 72.83%; //~72.83%;
    max-width: 72.83%;
  }
}

[class*="col-"].add-filter-applylabel-col {
  flex: 0 0 calc(100% - 120px);
  max-width: calc(100% - 120px);

  @include media(">sm") {
    flex: 0 0 68.7%;
    max-width: 68.7%;
  }
}

.dropdown-toggle.has-icon,
.dropdown-item.has-icon {
  display: flex;
  align-items: center;
  .icon {
    margin-top: -1px;
    margin-right: 0.625rem;
    font-size: 1rem;
  }
}

// == Fields with icons
.form-field-has-icon {
  .form-control {
    padding-right: 2.5rem;
  }

  .icon {
    position: absolute;
    top: 50%;
    right: .75rem;
    transform: translateY(-50%);
  }
}

.form-content-holder .form-control {
  font-size: 14px;
}

.fab-bottom {
  position: fixed;
  z-index: 10;
  bottom: 2rem;
  right: 0.8rem;
  background-color: $brand-blue;

  @include media("<=sm"){
    bottom: 6rem;
  }
}

.userame-field-group {
  .form-control {
    @include media(">sm") {
      width: calc(70% - 50px);

      &.is-readonly {
        width: calc(30% - 50px);
      }
    }

    @include media("<=sm") {
      &.is-readonly {
        width: calc(100% - 48px);
      }
    }
  }

  i {
    margin-left: 10px;
  }

  .domain-separator {
    margin-left: 0.75rem;
    width: 2.25rem;
    font-size: 1.5rem;
  }

  .is-readonly {
    background: $brand-white;
    font-style: italic;
  }
}

.is-validate {
  &.input-group {
    border: 1px solid $error-red;
    border-radius: 4px;

    .form-control {
      border: 0;
    }
    .input-group-addon {
      border: 0;
    }
  }
  label::before {
    border-color: $error-red;
  }
}

.signup-form {
  position: relative;
  padding-top: 5px;
  .validate-message {
    display: block;
    margin-bottom: 0.375rem;
    color: $error-red !important;
    font-size: 0.875rem;
    text-align: left;
  }

  &__failed {
    position: absolute;
    left: 0px;
    top: 0;
    width: 100%;
    text-align: center;
    color: $error-red;
  }
  .email-input {
    border: none !important;
    &:focus {
      box-shadow: none;
      outline: none;
    }
  }
}

// == Key generator modal
.progress-label {
  margin-bottom: 0.5rem;
  font-size: 0.75rem;
}

.progress-sm {
  .progress-bar {
    height: 0.875rem;
  }
}

.username-availability-spinner {
  position: absolute;
  right: -18px;
}

.folder-dropdown {
  max-height: 221px;
  overflow-y: auto;
  max-width: 250px;
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.folder-dropdown-item {
  max-width: 200px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  padding-bottom: 1px;
}

.custom-domains-dropdown {
  width: 140px !important;
  height: 45px !important;
  padding: 0.813rem 0.5rem !important;
  border-radius: 4px !important;

  div {
    overflow: hidden;
    margin-right: 10px;
    text-overflow: ellipsis;
  }
}

.addresses-list {
  min-width: 55vw;
}


.plan-details {
  .desc-card-body {
    background: #fafafa;
    border: 1px solid #f2f2f2;
  }

  .subscription {
    color: black;
    margin-top: 10px;

    .subscription-tag {
      font-weight: bold;
      font-size: 30px;
      text-transform: uppercase;
    }

    .material-icons {
      font-size: 110px;
    }

    .btn-gradient-primary {
      padding: 10px 50px;
    }
  }

  .info-list {
    li {
      border-right: 0;
    }

    li:first-child {
      border-top: 0;
    }

    li:last-child {
      border-bottom: 0;
    }
  }

  .invoices {
    height: 331px;
    position: relative;
    overflow-y: auto;
    overflow-x: hidden;

    .loader {
      position: absolute;
      left: 45%;
      top: 43%;
    }

    .invoices-list {
      padding: 1.5rem;

      li {
        background: white;
        border: 1px solid #f5f5f5;
        font-size: 0.875rem;

        &:first-child {
          border: 1px solid #fafafa;
          border-bottom: 0;
        }
      }
    }

    .col-item {
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }

  .actions {
    .material-icons {
      width: 32px;
    }
  }

  .no-invoice {
    height: auto;
  }

  .no-data {
    color: black;
    padding: 14px 1.5rem;
  }
}

